<resources>
    <string name="app_name">슈터디</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="network_permission">네트워크 연결을 위해서 필요합니다</string>
    <string name="calendar">달력</string>
    <string name="community">게시판</string>
    <string name="close">닫기</string>
    <string name="sun">일</string>
    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
</resources>
